--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
+
+html {
+    overflow-y: hidden;
+}
+
 body{
     background: url('../images/watercolour.jpg') no-repeat center center fixed; 
     background-size: auto;
@@ -9,6 +17,7 @@ body{
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    overflow-y: scroll;
 }
 
 .container{
@@ -17,8 +26,8 @@ body{
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     width: 80%;
     max-width: 900px;
     min-width: 340px;
